# sample_app_qt

./: README.md  pyproject.toml
src/application_login/: login.py
src/application_login/UI/: login_window.ui  ui_login_window.py
src/persons/: add_person.py
src/persons/UI/: add_person_window.ui  ui_add_person_window.py
src/sample_app/: __init__.py
src/sample_app/UI/: main_window.ui  ui_main_window.py
